			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05b: *********************************

BUG: (10/27/06, DN) Constraint system having problems with angled arcs (Bug #1253).
FIX: In "LayoutCell.nonOrthogFixAng" search "bestAI" among arcs connected to the same port
    as other end of "ai".

IMP: (10/25/06, DN) GridWidth of ImmutableArcInst is always even.

BUG: (10/25/06, DN) RTree is not fresh after creating new arc (Bug #1252).
FIX: Call unfreshRTree after arc changes. Rollback lazy RTree creation for now.

IMP: (10/25/06, RK) Non-functional layout generator project settings tab.

IMP: (10/25/06, DN) Layer.Function is enum. Layer.Function.Set is implemented and used in
    Technology.getShapeOfNodes/Arcs methods.

IMP: (10/24/06, DN) Extended API of immutable classes EPoint, ERectangle, ImmutableArcInst.
    They have getters and factory methods in double lambda units and in long grid units.
    Grid units are long in API, but they are restricted to "int" range in current implementation.
    Additional memory cost is 8 bytes per EPoint. Alternative ECoord implementation is possible,
    which is more memory efficient, but a little slower.

BUG: (10/23/06, DN) Short arcs in TechPalette (Bug #1250).
FIX: In ArcProto.getShapeOfDummyArc swap end cooridantes, so that arc's angle is 0.

BUG: (10/23/06, GVG) Problems with alternate poly rules in 180nm (bug#1249, reported by David Harris)
FIX: Poly and active nodes in primitives were not properly resized after major XML changes done.

BUG: (10/21/06, DN) Cannot select horizontal arcs (Bug #1248).
FIX: In EDatabase.getBackup() call ai.getBounds() for each arcs to precompute arc bounds.

BUG: (10/20/06, GVG) [Bug 1245] FIle->Project Settings->Technology page is confusing/inconsistent (Bug# 1245)
FIX: Technology tab in project preferences was re-organized. For MoCMOS tech, the feature size is included as